force-app/main/default/objects/Animal_Species__c/Animal_Species__c.object-meta.xml
<CustomObject>
    <label>Animal Species</label>
    <nameField>
        <displayFormat>AS-{000}</displayFormat>
        <label>Animal Species Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Species</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>