force-app/main/default/objects/Animal_Species__c/fields/Animal_Species__c.field-meta.xml
<CustomField>
    <fullName>Animal_Species__c</fullName>
    <label>Animal Species</label>
    <length>255</length>
    <type>Text</type>
</CustomField>