force-app/main/default/objects/Animal_Species__c/fields/Animal_Strain__c.field-meta.xml
<CustomField>
    <fullName>Animal_Strain__c</fullName>
    <label>Animal Strain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>