force-app/main/default/objects/Animal_Species__c/fields/Exp_Procedure_cost_per_animal__c.field-meta.xml
<CustomField>
    <fullName>Exp_Procedure_cost_per_animal__c</fullName>
    <label>Exp-Procedure cost per animal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>