force-app/main/default/objects/Animal_Species__c/fields/Exp_Procedure_Total_cost__c.field-meta.xml
<CustomField>
    <fullName>Exp_Procedure_Total_cost__c</fullName>
    <label>Exp-Procedure Total cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>