force-app/main/default/objects/Animal_Species__c/fields/Exp_Procedure_total_number__c.field-meta.xml
<CustomField>
    <fullName>Exp_Procedure_total_number__c</fullName>
    <label>Exp-Procedure total number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>