force-app/main/default/objects/Animal_Species__c/fields/Experiment_Title__c.field-meta.xml
<CustomField>
    <fullName>Experiment_Title__c</fullName>
    <label>Experiment Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>