force-app/main/default/objects/Animal_Species__c/fields/Institute_Place_for_Exp_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Institute_Place_for_Exp_Procedure__c</fullName>
    <label>Institute/Place for Exp-Procedure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>