force-app/main/default/objects/Animal_Species__c/fields/Maintenance_cost_per_animal__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_cost_per_animal__c</fullName>
    <label>Maintenance cost per animal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>