force-app/main/default/objects/Animal_Species__c/fields/Maintenance_total_number__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_total_number__c</fullName>
    <label>Maintenance total number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>