force-app/main/default/objects/Animal_Species__c/fields/No_of_Animals__c.field-meta.xml
<CustomField>
    <fullName>No_of_Animals__c</fullName>
    <label>No. of Animals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>