force-app/main/default/objects/Animal_Species__c/fields/Purchase_Total_cost__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Total_cost__c</fullName>
    <label>Purchase Total cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>