force-app/main/default/objects/Animal_Species__c/fields/Purchase_Year_Required__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Year_Required__c</fullName>
    <label>Purchase Year Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>