force-app/main/default/objects/Animal_Species__c/fields/Source_of_supply__c.field-meta.xml
<CustomField>
    <fullName>Source_of_supply__c</fullName>
    <label>Source of supply</label>
    <length>255</length>
    <type>Text</type>
</CustomField>